syntax = "proto3";

package payment;

option go_package= "./payment";

service PaymentService{
  rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse);
  rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse);
  rpc GetPayments(GetPaymentsRequest) returns (GetPaymentsResponse);
  rpc GetPaymentsTypes(GetPaymentsTypesRequest) returns (GetPaymentsTypesResponse);
  rpc UpdatePayment(UpdatePaymentRequest) returns (UpdatePaymentResponse);
  rpc UpdatePaymentStatus(UpdatePaymentStatusRequest) returns (UpdatePaymentStatusResponse);
  rpc DeletePayment(DeletePaymentRequest) returns (DeletePaymentResponse);
}

message CreatePaymentRequest{
  int64 companyId = 1;
  string name = 2;
  optional string bank = 3;
  optional string accountNumber = 4;
  optional string accountType = 5;
  optional string identificationNumber = 6;
  optional string identificationType = 7;
  optional string phone = 8;
  optional string email = 9;
  int64 paymentTypeId = 10;
}

message CreatePaymentResponse{
  int64 id = 1;
  int64 status = 2;
  string error = 3;
}

message GetPaymentRequest{
  int64 id = 1;
}

message GetPaymentResponse{
  int64 id = 1;
  int64 companyId = 2;
  string name = 3;
  optional string bank = 4;
  optional string accountNumber = 5;
  optional string accountType = 6;
  optional string identificationNumber = 7;
  optional string identificationType = 8;
  optional string phone = 9;
  optional string email = 10;
  int64 paymentTypeId = 11;
  GetChildPaymentTypeResponse paymentType = 12;
  bool isActive = 13;
  int64 status = 14;
  string error = 15;
}

message GetChildPaymentTypeResponse{
  int64 id = 1;
  string name = 2;
  optional string imagePath = 3;
}

message GetPaymentsRequest{
  int64 companyId = 1;
  int64 paymentTypeId = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message GetPaymentsResponse{
  repeated GetPaymentResponse payments = 1;
  int64 status = 2;
  string error = 3;
}

message GetPaymentsTypesRequest{
  int64 companyId = 1;
}

message GetPaymentsTypesResponse{
  repeated PaymentType paymentsTypes = 1;
  int64 status = 2;
  string error = 3;
}

message PaymentType {
  int64 id = 1;
  int64 companyId = 2;
  int64 paymentTypeId = 11;
  GetChildPaymentTypeResponse paymentType = 12;
  bool isActive = 13;
}

message UpdatePaymentRequest{
  int64 id = 1;
  string name = 2;
  optional string bank = 3;
  optional string accountNumber = 4;
  optional string accountType = 5;
  optional string identificationNumber = 6;
  optional string identificationType = 7;
  optional string phone = 8;
  optional string email = 9;
  int64 paymentTypeId = 10;
}

message UpdatePaymentResponse{
  int64 status = 1;
  string error = 2;
}

message UpdatePaymentStatusRequest{
  int64 id = 1;
  bool status = 2;
}

message UpdatePaymentStatusResponse{
  int64 status = 1;
  string error = 2;
}

message DeletePaymentRequest{
  int64 id = 1;
}

message DeletePaymentResponse{
  int64 status = 1;
  string error = 2;
}
