syntax = "proto3";

package payment_type;

option go_package= "./payment_type";

service PaymentTypeService{
  rpc GetPaymentType(GetPaymentTypeRequest) returns (GetPaymentTypeResponse);
  rpc GetPaymentTypes(GetPaymentTypesRequest) returns (GetPaymentTypesResponse);
}

message GetPaymentTypeRequest{
  int64 id = 1;
}

message GetPaymentTypeResponse{
  int64 id = 1;
  string name = 2;
  optional string imagePath = 3;
  int64 status = 4;
  string error = 5;
}

message GetPaymentTypesRequest{
  int32 limit = 2;
  int32 offset = 3;
}

message GetPaymentTypesResponse{
  repeated GetPaymentTypeResponse payment_types = 1;
  int64 status = 2;
  string error = 3;
}